[project]
name = "DudodMila"
version = "0.1.0"
description = "FirstPythonProject"
authors = [
    {name = "mila", email = "2451221415@qq.com"},
]
dependencies = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "requests>=2.31.0",
    "good>=0.0.8",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
mila = { composite = [
    'black .',
    'isort .',
    'pytest',
]}
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
